fix - overflow hidden main

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@ main {
 	@include mq(md) {
 		padding-inline: $main-inlinePadding-desktop;
 	}
+	overflow: hidden;
 }
 
 .text-justify {
